--- a/DrawingRegisterWeb/Views/Projects/Details.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Details.cshtml
@@ -1,71 +1,71 @@
 ﻿@model DrawingRegisterWeb.ViewModels.ProjectVM
 
 @{
-    ViewData["Title"] = "Project Details";
+	ViewData["Title"] = "Project Details";
 }
 
 <h1 class="text-primary">Details</h1>
 
 <div>
-    <h4>Project</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project!.ProjectNubmer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project!.ProjectNubmer)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project!.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project!.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project!.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project!.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project!.CreateDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project!.CreateDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project!.DeadlineDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project!.DeadlineDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Project!.ProjectState)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Project!.ProjectState!.Name)
-        </dd>
-    </dl>
+	<h4>Project</h4>
+	<hr />
+	<dl class="row">
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Project!.ProjectNubmer)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Project!.ProjectNubmer)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Project!.Name)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Project!.Name)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Project!.Description)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Project!.Description)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Project!.CreateDate)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Project!.CreateDate)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Project!.DeadlineDate)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Project!.DeadlineDate)
+		</dd>
+		<dt class = "col-sm-2">
+			@Html.DisplayNameFor(model => model.Project!.ProjectState)
+		</dt>
+		<dd class = "col-sm-10">
+			@Html.DisplayFor(model => model.Project!.ProjectState!.Name)
+		</dd>
+	</dl>
 </div>
 
 <div class="btn-group" role="group">
-    <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
-    <a asp-action="Edit" asp-route-id="@Model.Project!.Id" class="btn btn-outline-primary">Edit</a>
-    <a asp-action="Delete" asp-route-id="@Model.Project!.Id" class="btn btn-outline-danger">Delete</a>
+	<a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
+	<a asp-action="Edit" asp-route-id="@Model.Project!.Id" class="btn btn-outline-primary">Edit</a>
+	<a asp-action="Delete" asp-route-id="@Model.Project!.Id" class="btn btn-outline-danger">Delete</a>
 </div>
 
 <hr />
 
 <ul class="nav nav-tabs" role="tablist">
   <li class="nav-item" role="presentation">
-    <a class="nav-link active" data-bs-toggle="tab" href="#drawings" aria-selected="true" role="tab">Drawings</a>
+	<a class="nav-link active" data-bs-toggle="tab" href="#drawings" aria-selected="true" role="tab">Drawings</a>
   </li>
   <li class="nav-item" role="presentation">
-    <a class="nav-link" data-bs-toggle="tab" href="#documentations" aria-selected="false" role="tab" tabindex="-1">Documentations</a>
+	<a class="nav-link" data-bs-toggle="tab" href="#documentations" aria-selected="false" role="tab" tabindex="-1">Documentations</a>
   </li>
   <li class="nav-item" role="presentation">
-    <a class="nav-link" data-bs-toggle="tab" href="#layouts" aria-selected="false" role="tab" tabindex="-1">Layouts</a>
+	<a class="nav-link" data-bs-toggle="tab" href="#layouts" aria-selected="false" role="tab" tabindex="-1">Layouts</a>
   </li>
 </ul>
 
@@ -73,140 +73,204 @@
 
   <div class="tab-pane fade active show" id="drawings" role="tabpanel">
 
-    @using (Html.BeginForm("Create", "Drawings"))
-    {
-       <input type="text" name="idData" value="@Model.Project!.Id" hidden/>
-       <button type="submit" formmethod="get" class="btn btn-primary mt-3 mb-3">Create New Drawing</button >
-    }
+	@using (Html.BeginForm("Create", "Drawings"))
+	{
+	   <input type="text" name="idData" value="@Model.Project!.Id" hidden/>
+	   <button type="submit" formmethod="get" class="btn btn-primary mt-3 mb-3">Create New Drawing</button >
+	}
 
-    <table class="table table-striped mt-3" id="sortTable">
-        <thead>
-            <tr class="user-select-none">
-                <th onclick="sortTable(0)">
-                    @Html.DisplayNameFor(model => model.Drawings![0].DrawingNumber)
-                    <i class="sortIcon bi"></i>
-                </th>
-                <th onclick="sortTable(1)">
-                    @Html.DisplayNameFor(model => model.Drawings![0].Name)
-                    <i class="sortIcon bi"></i>
-                </th>
-                <th onclick="sortTable(2)">
-                    @Html.DisplayNameFor(model => model.Drawings![0].Description)
-                    <i class="sortIcon bi"></i>
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-                @foreach (var item in Model.Drawings!)
-                {
-                    <tr>
-                        <td>
-                            @item.DrawingNumber
-                        </td>
-                        <td>
-                            @item.Name
-                        </td>
-                        <td>
-                            @item.Description
-                        </td>
-                        <td>
-                            <a asp-controller="Drawings" asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary"> 
-                                <i class="bi bi-folder2-open"></i> Open
-                            </a>
-                        </td>
-                    </tr>
-                }
-        </tbody>
-    </table>
+	<table class="table table-striped mt-3" id="sortTable">
+		<thead>
+			<tr class="user-select-none">
+				<th onclick="sortTable(0)">
+					@Html.DisplayNameFor(model => model.Drawings![0].DrawingNumber)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(1)">
+					@Html.DisplayNameFor(model => model.Drawings![0].Name)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(2)">
+					@Html.DisplayNameFor(model => model.Drawings![0].Description)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+				@foreach (var item in Model.Drawings!)
+				{
+					<tr>
+						<td>
+							@item.DrawingNumber
+						</td>
+						<td>
+							@item.Name
+						</td>
+						<td>
+							@item.Description
+						</td>
+						<td>
+							<a asp-controller="Drawings" asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary"> 
+								<i class="bi bi-folder2-open"></i> Open
+							</a>
+						</td>
+					</tr>
+				}
+		</tbody>
+	</table>
   </div>
 
   <div class="tab-pane fade" id="documentations" role="tabpanel">
-    <table class="table table-striped mt-3">
-        <thead>
-            <tr>
-                <th>
-                        @Html.DisplayNameFor(model => model.Documentations![0].FileName)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.Documentations![0].FileType)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.Documentations![0].Revision)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.Documentations![0].CreateDate)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-                @foreach (var item in Model.Documentations!)
-                {
-                    <tr>
-                        <td>
-                            @item.FileName
-                        </td>
-                        <td>
-                            @item.FileType
-                        </td>
-                        <td>
-                            @item.Revision
-                        </td>
-                        <td>
-                            @item.CreateDate
-                        </td>
-                        <td>
-                            <a asp-controller="Documentations" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Preview</a>
-                        </td>
-                    </tr>
-                }
-        </tbody>
-    </table>
+
+	<form asp-controller="Documentations" asp-action="Create" method="post" enctype="multipart/form-data" class="row mt-3 mb-3">
+	   <div class="col-8">
+			<input type="text" name="projectId" value="@Model.Project!.Id" hidden/>
+			<input type="file" name="files" class="form-control" multiple/>
+	   </div> 
+	   <button type="submit" class="btn btn-primary col-4">Upload</button >
+	</form>
+
+	<table class="table table-striped mt-3">
+		<thead>
+			<tr>
+				<th>
+						@Html.DisplayNameFor(model => model.Documentations![0].FileName)
+				</th>
+				<th>
+						@Html.DisplayNameFor(model => model.Documentations![0].FileType)
+				</th>
+				<th>
+						@Html.DisplayNameFor(model => model.Documentations![0].Revision)
+				</th>
+				<th>
+						@Html.DisplayNameFor(model => model.Documentations![0].CreateDate)
+				</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+				@foreach (var item in Model.Documentations!)
+				{
+					<tr>
+						<td>
+							@item.FileName
+						</td>
+						<td>
+							@item.FileType
+						</td>
+						<td>
+							@item.Revision
+						</td>
+						<td>
+							@item.CreateDate.ToString("yyyy/MM/dd")
+						</td>
+						<td>
+
+							<div class="btn btn-group">							
+								@if (item.FileType == "pdf")
+								{
+									<a	href="@item.FileUrl"
+										target="_blank"
+										class="btn btn-outline-primary"
+										data-bs-toggle="tooltip" 
+										data-bs-placement="bottom" 
+										data-bs-original-title="Open" 
+										aria-describedby="tooltip716761"> 
+											<i class="bi bi-search"></i>
+									</a>
+								}
+								<a	href="@item.FileUrl"
+									class="btn btn-outline-primary"
+									data-bs-toggle="tooltip" 
+									data-bs-placement="bottom" 
+									data-bs-original-title="Download" 
+									aria-describedby="tooltip716761"
+									download="@item.FileName.@item.FileType"> 
+										<i class="bi bi-cloud-download"></i>
+								</a>
+								<a asp-controller="Documentations" asp-action="Edit" asp-route-id="@item.Id"
+									class="btn btn-outline-primary"
+									data-bs-toggle="tooltip" 
+									data-bs-placement="bottom" 
+									data-bs-original-title="Edit" 
+									aria-describedby="tooltip716761"> 
+										<i class="bi bi-pencil-square"></i>
+								</a>
+								<a asp-controller="Documentations" asp-action="Delete" asp-route-id="@item.Id"
+									class="btn btn-outline-danger"
+									data-bs-toggle="tooltip" 
+									data-bs-placement="bottom" 
+									data-bs-original-title="Delete" 
+									aria-describedby="tooltip716761"> 
+									<i class="bi bi-trash"></i>
+								</a>
+							</div>
+						</td>
+					</tr>
+				}
+		</tbody>
+	</table>
   </div>
 
   <div class="tab-pane fade" id="layouts" role="tabpanel">
-    <table class="table table-striped mt-3">
-        <thead>
-            <tr>
-                <th>
-                        @Html.DisplayNameFor(model => model.Layouts![0].FileName)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.Layouts![0].FileType)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.Layouts![0].Revision)
-                </th>
-                <th>
-                        @Html.DisplayNameFor(model => model.Layouts![0].CreateDate)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-                @foreach (var item in Model.Layouts!)
-                {
-                    <tr>
-                        <td>
-                        @item.FileName
-                        </td>
-                        <td>
-                        @item.FileType
-                        </td>
-                        <td>
-                        @item.Revision
-                        </td>
-                        <td>
-                        @item.CreateDate
-                        </td>
-                        <td>
-                            <a asp-controller="Layouts" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Preview</a>
-                        </td>
-                    </tr>
-                }
-        </tbody>
-    </table>
+
+	@using (Html.BeginForm("Create", "Layouts"))
+	{
+	   <input type="text" name="idData" value="@Model.Project!.Id" hidden/>
+	   <button type="submit" formmethod="get" class="btn btn-primary mt-3 mb-3">Create New Documentation</button >
+	}
+
+	<table class="table table-striped mt-3">
+		<thead>
+			<tr>
+				<th>
+						@Html.DisplayNameFor(model => model.Layouts![0].FileName)
+				</th>
+				<th>
+						@Html.DisplayNameFor(model => model.Layouts![0].FileType)
+				</th>
+				<th>
+						@Html.DisplayNameFor(model => model.Layouts![0].Revision)
+				</th>
+				<th>
+						@Html.DisplayNameFor(model => model.Layouts![0].CreateDate)
+				</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+				@foreach (var item in Model.Layouts!)
+				{
+					<tr>
+						<td>
+						@item.FileName
+						</td>
+						<td>
+						@item.FileType
+						</td>
+						<td>
+						@item.Revision
+						</td>
+						<td>
+						@item.CreateDate
+						</td>
+						<td>
+							<a asp-controller="Layouts" asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Preview</a>
+						</td>
+					</tr>
+				}
+		</tbody>
+	</table>
   </div>
 
 </div>
+
+
+@section Scripts{
+		<script>
+			$(document).ready(function(){
+			  $('[data-bs-toggle="tooltip"]').tooltip();
+			});
+		</script>
+}
